# CMake_sublevel_library

./: CMakeLists.txt  main.cpp
myLibDirectory/: CMakeLists.txt
